--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.22.0",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.6",
     "prettier": "2.2.1",
     "tailwindcss": "^3.0.22"
