--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "antd": "^4.24.0",
     "axios": "^0.21.1",
     "html-react-parser": "^3.0.4",
     "next": "^12.0.4",
