--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "antd": "^4.24.0",
     "axios": "^0.21.1",
     "html-react-parser": "^3.0.4",
+    "jquery": "^3.6.1",
     "next": "^12.0.4",
     "next-translate": "^1.6.0",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.11",
+    "react-yandex-maps": "^4.6.0",
     "swr": "^1.2.2"
   },
   "devDependencies": {
