--- a/package.json
+++ b/package.json
@@ -1,41 +1,51 @@
 {
-  "name": "breeze-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.4.2",
-    "antd": "^4.24.0",
-    "axios": "^0.21.1",
-    "html-react-parser": "^3.0.4",
-    "jquery": "^3.6.1",
-    "next": "^12.0.4",
-    "next-translate": "^1.6.0",
-    "nprogress": "^0.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-image-gallery": "^1.2.11",
-    "react-yandex-maps": "^4.6.0",
-    "swr": "^1.2.2"
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.12.1",
-    "@next/eslint-plugin-next": "^10.0.4",
-    "@tailwindcss/forms": "^0.5.2",
-    "autoprefixer": "^10.4.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-next": "^0.0.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.22.0",
-    "file-loader": "^6.2.0",
-    "postcss": "^8.4.6",
-    "prettier": "2.2.1",
-    "tailwindcss": "^3.0.22"
-  }
+    "name": "RedFront",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "find:unused": "next-unused"
+    },
+    "next-unused": {
+        "next-unused": {
+            "alias": {},
+            "include": ["src/components"],
+            "exclude": [],
+            "entrypoints": ["src/pages/index.js"]
+        }
+    },
+    "dependencies": {
+        "@headlessui/react": "^1.4.2",
+        "antd": "^4.24.0",
+        "axios": "^0.21.1",
+        "html-react-parser": "^3.0.4",
+        "jquery": "^3.6.1",
+        "next": "^12.0.4",
+        "next-translate": "^1.6.0",
+        "next-unused": "^0.0.6",
+        "nprogress": "^0.2.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-image-gallery": "^1.2.11",
+        "react-yandex-maps": "^4.6.0",
+        "swr": "^1.2.2"
+    },
+    "devDependencies": {
+        "@babel/eslint-parser": "^7.12.1",
+        "@next/eslint-plugin-next": "^10.0.4",
+        "@tailwindcss/forms": "^0.5.2",
+        "autoprefixer": "^10.4.2",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.17.0",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-plugin-next": "^0.0.0",
+        "eslint-plugin-prettier": "^3.3.0",
+        "eslint-plugin-react": "^7.22.0",
+        "file-loader": "^6.2.0",
+        "postcss": "^8.4.6",
+        "prettier": "2.2.1",
+        "tailwindcss": "^3.0.22"
+    }
 }
