--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "next-unused": {
         "next-unused": {
             "alias": {},
-            "include": ["src/components"],
+            "include": [
+                "src/components"
+            ],
             "exclude": [],
-            "entrypoints": ["src/pages/index.js"]
+            "entrypoints": [
+                "src/pages/index.js"
+            ]
         }
     },
     "dependencies": {
@@ -23,6 +27,7 @@
         "html-react-parser": "^3.0.4",
         "jquery": "^3.6.1",
         "next": "^12.0.4",
+        "next-share": "^0.19.0",
         "next-translate": "^1.6.0",
         "next-unused": "^0.0.6",
         "nprogress": "^0.2.0",
