--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "html-react-parser": "^3.0.4",
         "jquery": "^3.6.1",
         "next": "^12.0.4",
+        "next-plugin-antd-less": "^1.8.0",
         "next-share": "^0.19.0",
         "next-translate": "^1.6.0",
         "next-unused": "^0.0.6",
@@ -39,10 +40,12 @@
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.12.1",
+        "@emeks/antd-custom-theme-generator": "0.2.1",
         "@next/eslint-plugin-next": "^10.0.4",
         "@tailwindcss/forms": "^0.5.2",
         "autoprefixer": "^10.4.2",
         "babel-eslint": "^10.1.0",
+        "babel-plugin-import": "^1.13.6",
         "eslint": "^7.17.0",
         "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-next": "^0.0.0",
