--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "next-share": "^0.19.0",
         "next-translate": "^1.6.0",
         "next-unused": "^0.0.6",
+        "node-geocoder": "^4.2.0",
         "nprogress": "^0.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
