--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ yarn-error.log*
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/workspace.xml
 
 # AWS User-specific
 .idea/**/aws.xml
