--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
         }
     },
     "dependencies": {
+        "@ant-design/icons": "^5.0.1",
         "@headlessui/react": "^1.4.2",
         "antd": "^4.24.0",
         "axios": "^0.21.1",
         "html-react-parser": "^3.0.4",
         "jquery": "^3.6.1",
         "next": "^12.0.4",
+        "next-i18next": "^13.1.5",
         "next-plugin-antd-less": "^1.8.0",
         "next-share": "^0.19.0",
-        "next-translate": "^1.6.0",
         "next-unused": "^0.0.6",
-        "node-geocoder": "^4.2.0",
         "nprogress": "^0.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
