--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-image-gallery": "^1.2.11",
+        "react-responsive": "^9.0.2",
         "react-yandex-maps": "^4.6.0",
         "swr": "^1.2.2"
     },
