--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "axios": "^0.21.1",
         "html-react-parser": "^3.0.4",
         "jquery": "^3.6.1",
+        "loan-schedule.js": "^2.0.3",
         "next": "^12.0.4",
         "next-i18next": "^13.1.5",
         "next-plugin-antd-less": "^1.8.0",
