--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "@ant-design/icons": "^5.0.1",
         "@headlessui/react": "^1.4.2",
         "antd": "^4.24.0",
-        "axios": "^0.21.1",
+        "axios": "^0.24.0",
+        "axios-hooks": "^4.0.0",
         "html-react-parser": "^3.0.4",
         "jquery": "^3.6.1",
         "loan-schedule.js": "^2.0.3",
