--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.0.1",
+        "@ant-design/pro-components": "^2.3.57",
         "@headlessui/react": "^1.4.2",
         "antd": "^4.24.0",
         "axios": "^0.24.0",
