--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "next-i18next": "^13.1.5",
         "next-share": "^0.19.0",
         "next-unused": "^0.0.6",
+        "nextjs-progressbar": "^0.0.16",
         "nprogress": "^0.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
