--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
         "react-dom": "^17.0.2",
         "react-image-gallery": "^1.2.11",
         "react-responsive": "^9.0.2",
-        "swr": "^1.2.2"
-    },
-    "devDependencies": {
+        "swr": "^1.2.2",
         "@babel/eslint-parser": "^7.12.1",
         "@emeks/antd-custom-theme-generator": "0.2.1",
         "@next/eslint-plugin-next": "^10.0.4",
@@ -59,5 +57,8 @@
         "postcss": "^8.4.6",
         "prettier": "2.2.1",
         "tailwindcss": "^3.0.22"
+    },
+    "devDependencies": {
+
     }
 }
