Updated deployment process.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
+        "start:client": "./node_modules/pm2/bin/pm2  start npm --name redfront -- run start  -- -p 3000",
         "find:unused": "next-unused"
     },
     "next-unused": {
@@ -23,10 +24,23 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.0.1",
+        "@babel/eslint-parser": "^7.12.1",
+        "@emeks/antd-custom-theme-generator": "0.2.1",
         "@headlessui/react": "^1.4.2",
+        "@next/eslint-plugin-next": "^10.0.4",
+        "@tailwindcss/forms": "^0.5.2",
         "antd": "^4.24.0",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.24.0",
         "axios-hooks": "^4.0.0",
+        "babel-eslint": "^10.1.0",
+        "babel-plugin-import": "^1.13.6",
+        "eslint": "^7.17.0",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-plugin-next": "^0.0.0",
+        "eslint-plugin-prettier": "^3.3.0",
+        "eslint-plugin-react": "^7.22.0",
+        "file-loader": "^6.2.0",
         "html-react-parser": "^3.0.4",
         "jquery": "^3.6.1",
         "loan-schedule.js": "^2.0.3",
@@ -36,29 +50,14 @@
         "next-unused": "^0.0.6",
         "nextjs-progressbar": "^0.0.16",
         "nprogress": "^0.2.0",
+        "pm2": "^5.3.0",
+        "postcss": "^8.4.6",
+        "prettier": "2.2.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-image-gallery": "^1.2.11",
         "react-responsive": "^9.0.2",
         "swr": "^1.2.2",
-        "@babel/eslint-parser": "^7.12.1",
-        "@emeks/antd-custom-theme-generator": "0.2.1",
-        "@next/eslint-plugin-next": "^10.0.4",
-        "@tailwindcss/forms": "^0.5.2",
-        "autoprefixer": "^10.4.2",
-        "babel-eslint": "^10.1.0",
-        "babel-plugin-import": "^1.13.6",
-        "eslint": "^7.17.0",
-        "eslint-config-prettier": "^7.1.0",
-        "eslint-plugin-next": "^0.0.0",
-        "eslint-plugin-prettier": "^3.3.0",
-        "eslint-plugin-react": "^7.22.0",
-        "file-loader": "^6.2.0",
-        "postcss": "^8.4.6",
-        "prettier": "2.2.1",
         "tailwindcss": "^3.0.22"
-    },
-    "devDependencies": {
-
     }
 }
