--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
         "react-dom": "^17.0.2",
         "react-image-gallery": "^1.2.11",
         "react-responsive": "^9.0.2",
+        "sharp": "^0.32.1",
+        "sharp-multer": "^0.2.5",
         "swr": "^1.2.2",
         "tailwindcss": "^3.0.22"
     }
