--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "html-react-parser": "^3.0.4",
         "jquery": "^3.6.1",
         "loan-schedule.js": "^2.0.3",
+        "mysql": "^2.18.1",
         "next": "^12.0.4",
         "next-i18next": "^13.1.5",
         "next-share": "^0.19.0",
