--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@emeks/antd-custom-theme-generator": "0.2.1",
         "@headlessui/react": "^1.4.2",
         "@next/eslint-plugin-next": "^10.0.4",
+        "@react-google-maps/api": "^2.18.1",
+        "@react-google-maps/marker-clusterer": "^2.16.1",
         "@tailwindcss/forms": "^0.5.2",
         "antd": "^4.24.0",
         "autoprefixer": "^10.4.2",
