--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react-responsive": "^9.0.2",
         "sharp": "^0.32.1",
         "sharp-multer": "^0.2.5",
+        "styled-components": "^5.3.10",
         "swr": "^1.2.2",
         "tailwindcss": "^3.0.22"
     }
