--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-image-gallery": "^1.2.11",
+        "react-loader-spinner": "^5.3.4",
         "react-responsive": "^9.0.2",
         "sharp": "^0.32.1",
         "sharp-multer": "^0.2.5",
