--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
         "eslint-plugin-prettier": "^3.3.0",
         "eslint-plugin-react": "^7.22.0",
         "file-loader": "^6.2.0",
+        "google-map-react": "^2.2.1",
         "html-react-parser": "^3.0.4",
         "jquery": "^3.6.1",
+        "jsts": "1.6.2",
         "loan-schedule.js": "^2.0.3",
         "mysql": "^2.18.1",
         "next": "^12.0.4",
