--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "babel-eslint": "^10.1.0",
         "babel-plugin-import": "^1.13.6",
         "eslint": "^7.17.0",
+        "eslint-config-next": "^13.5.6",
         "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-next": "^0.0.0",
         "eslint-plugin-prettier": "^3.3.0",
@@ -49,7 +50,7 @@
         "jsts": "1.6.2",
         "loan-schedule.js": "^2.0.3",
         "mysql": "^2.18.1",
-        "next": "^12.0.4",
+        "next": "^13.5.6",
         "next-i18next": "^13.1.5",
         "next-share": "^0.19.0",
         "next-unused": "^0.0.6",
@@ -58,8 +59,8 @@
         "pm2": "^5.3.0",
         "postcss": "^8.4.6",
         "prettier": "2.2.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "react-image-gallery": "^1.2.11",
         "react-loader-spinner": "^5.3.4",
         "react-responsive": "^9.0.2",
