--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "react-image-gallery": "^1.2.11",
         "react-loader-spinner": "^5.3.4",
         "react-responsive": "^9.0.2",
+        "react-spinners": "^0.13.8",
         "sharp": "^0.32.1",
         "sharp-multer": "^0.2.5",
         "styled-components": "^5.3.10",
