--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "prettier": "2.2.1",
         "react": "^18.3.1",
         "react-cookie": "^7.1.4",
+        "react-device-detect": "^2.2.3",
         "react-dom": "^18.3.1",
         "react-i18next": "^14.1.1",
         "react-image-gallery": "^1.2.11",
