--- a/package.json
+++ b/package.json
@@ -65,12 +65,14 @@
         "next-share": "^0.19.0",
         "next-unused": "^0.0.6",
         "nextjs-progressbar": "^0.0.16",
+        "nextjs-toploader": "^1.6.12",
         "nprogress": "^0.2.0",
         "pm2": "^5.3.0",
         "postcss": "^8.4.6",
         "prettier": "2.2.1",
         "react": "^18.3.1",
         "react-cookie": "^7.1.4",
+        "react-countup": "^6.5.3",
         "react-device-detect": "^2.2.3",
         "react-dom": "^18.3.1",
         "react-i18next": "^14.1.1",
